maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:20: error: reassignment to val
  cpt=0
     ^PledgeMaze:23: error: value += is not a member of Int
    cpt+=1
       ^PledgeMaze:27: error: value += is not a member of Int
    cpt+=1
       ^PledgeMaze:31: error: value += is not a member of Int
    cpt+=1
       ^PledgeMaze:35: error: value -= is not a member of Int
  cpt-=1
     ^